--- a/src/numerical/coord/CMakeLists.txt
+++ b/src/numerical/coord/CMakeLists.txt
@@ -1,20 +1,27 @@
 add_library(newton OBJECT newton.f90)
 target_link_libraries(newton PRIVATE const)
 
+add_library(spherical OBJECT spherical.f90)
+target_link_libraries(spherical PRIVATE const)
+
+add_library(geomagnetic OBJECT geomagnetic.f90)
+target_link_libraries(geomagnetic PRIVATE const)
+
 add_library(meshobj OBJECT meshobj.f90)
 target_link_libraries(meshobj PRIVATE const h5fortran::h5fortran)
 
+# fixme: wonky dependencies???
 add_library(meshobj_dipole OBJECT meshobj_dipole.f90 dipole_fns.f90)
-target_link_libraries(meshobj_dipole PRIVATE const meshobj newton)
+target_link_libraries(meshobj_dipole PRIVATE const meshobj newton spherical geomagnetic)
 
 add_executable(newton_testdriver newton_testdriver.f90)
-target_link_libraries(newton_testdriver PRIVATE const newton meshobj meshobj_dipole)
+target_link_libraries(newton_testdriver PRIVATE const newton meshobj meshobj_dipole newton spherical geomagnetic)
 
 add_executable(geomag2geog_testdriver geomag2geog_testdriver.f90)
-target_link_libraries(geomag2geog_testdriver PRIVATE const newton meshobj meshobj_dipole)
+target_link_libraries(geomag2geog_testdriver PRIVATE const geomagnetic)
 
 add_executable(grid_testdriver grid_testdriver.f90)
-target_link_libraries(grid_testdriver PRIVATE const newton meshobj meshobj_dipole)
+target_link_libraries(grid_testdriver PRIVATE const meshobj meshobj_dipole newton spherical geomagnetic)
 
-add_executable(fullgrid_testdriver fullgrid_testdriver.f90)
-target_link_libraries(fullgrid_testdriver PRIVATE const newton meshobj meshobj_dipole)
+add_executable(fullgrid_dipole_testdriver fullgrid_dipole_testdriver.f90)
+target_link_libraries(fullgrid_dipole_testdriver PRIVATE const meshobj meshobj_dipole newton spherical geomagnetic)
