new grid code inserted and compiling

--- a/src/numerical/CMakeLists.txt
+++ b/src/numerical/CMakeLists.txt
@@ -12,15 +12,15 @@ add_subdirectory(grid)
 configure_file(calculus/calculus.in.f90 calculus.f90 @ONLY)
 add_library(calculus OBJECT
   ${CMAKE_CURRENT_BINARY_DIR}/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
-target_link_libraries(calculus PRIVATE mesh)
+target_link_libraries(calculus PRIVATE meshobj)
 
 add_subdirectory(diffusion)
 
 add_library(advec OBJECT advection/advec_mpi.f90)
-target_link_libraries(advec PRIVATE const mpimod grid mesh)
+target_link_libraries(advec PRIVATE const mpimod grid meshobj)
 
 add_subdirectory(potential)
 
 add_subdirectory(coord)
 
-set_targ_props(advec calculus const diffusion grid interp mesh mumps_interface PDEelliptic PDEparabolic potential)
+set_targ_props(advec calculus const diffusion grid interp meshobj meshobj_cart meshobj_dipole mumps_interface PDEelliptic PDEparabolic potential)
