--- a/src/sources/CMakeLists.txt
+++ b/src/sources/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(sources OBJECT sources.f90 sources_mpi.f90)
-target_link_libraries(sources PRIVATE calculus collision const grid mesh mpimod)
+target_link_libraries(sources PRIVATE calculus collision const grid meshobj mpimod)
