--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -11,7 +11,8 @@ configure_file(magcalc_cli.in.f90 magcalc_cli.f90 @ONLY)
 add_executable(magcalc.bin)
 target_sources(magcalc.bin PRIVATE magcalc.f90 ${CMAKE_CURRENT_BINARY_DIR}/magcalc_cli.f90
 $<TARGET_OBJECTS:autogrid>)
-target_link_libraries(magcalc.bin PRIVATE exe_frontend config const grid io mesh mpimod pathlib reader sanity_check errors timeutils h5fortran::h5fortran)
+target_link_libraries(magcalc.bin PRIVATE exe_frontend config const grid io meshobj meshobj_cart meshobj_dipole spherical newton geomagnetic
+mpimod pathlib reader sanity_check errors timeutils h5fortran::h5fortran)
 set_target_properties(magcalc.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 add_test(NAME unit:magcalc_exe_ok COMMAND $<TARGET_FILE:magcalc.bin>)
