--- a/src/ionization/CMakeLists.txt
+++ b/src/ionization/CMakeLists.txt
@@ -35,8 +35,8 @@ if(glow)
 else()
   add_library(ionization OBJECT ionization.f90 glow_dummy.f90)
 endif(glow)
-target_link_libraries(ionization PRIVATE const neutral grid mesh timeutils fang mpimod MPI::MPI_Fortran)
+target_link_libraries(ionization PRIVATE const neutral grid meshobj timeutils fang mpimod MPI::MPI_Fortran)
 
 add_library(precipBCs OBJECT boundary_conditions/precipBCs_mod.f90)
 target_compile_options(precipBCs PRIVATE ${gcc10opts})
-target_link_libraries(precipBCs PRIVATE mpimod reader const grid mesh interp timeutils MPI::MPI_Fortran config)
+target_link_libraries(precipBCs PRIVATE mpimod reader const grid meshobj interp timeutils MPI::MPI_Fortran config)
