--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(PDEparabolic OBJECT PDEparabolic.f90)
 target_link_libraries(PDEparabolic PRIVATE const gbsv)
 
 add_library(diffusion OBJECT diffusion.f90)
-target_link_libraries(diffusion PRIVATE const grid mesh PDEparabolic)
+target_link_libraries(diffusion PRIVATE const grid meshobj PDEparabolic)
 
 if(hdf5 AND ${PROJECT_NAME}_BUILD_TESTING)
 
