scripts:prereqs: explicit HDF5 DEPENDS for clarity

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -31,22 +31,23 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   set(CMAKE_INSTALL_PREFIX ${prefix} CACHE PATH "top-level install path" FORCE)
 endif()
 
-set(LAPACK_ROOT ${CMAKE_INSTALL_PREFIX}/lapack)
-set(SCALAPACK_ROOT ${CMAKE_INSTALL_PREFIX}/scalapack)
-set(MUMPS_ROOT ${CMAKE_INSTALL_PREFIX}/mumps)
-set(H5FORTRAN_ROOT ${CMAKE_INSTALL_PREFIX}/h5fortran)
-set(GLOW_ROOT ${CMAKE_INSTALL_PREFIX}/glow)
+set(LAPACK_ROOT ${CMAKE_INSTALL_PREFIX})
+set(SCALAPACK_ROOT ${CMAKE_INSTALL_PREFIX})
+set(MUMPS_ROOT ${CMAKE_INSTALL_PREFIX})
+set(HDF5_ROOT ${CMAKE_INSTALL_PREFIX})
+set(H5FORTRAN_ROOT ${CMAKE_INSTALL_PREFIX})
+set(GLOW_ROOT ${CMAKE_INSTALL_PREFIX})
 
 message(STATUS "Building and installing libraries under ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "please add system environment variables:")
-foreach(p LAPACK_ROOT SCALAPACK_ROOT MUMPS_ROOT H5FORTRAN_ROOT GLOW_ROOT)
+foreach(p LAPACK_ROOT SCALAPACK_ROOT MUMPS_ROOT HDF5_ROOT H5FORTRAN_ROOT GLOW_ROOT)
   message(STATUS "   ${p}=${${p}}")
 endforeach()
 
 ExternalProject_Add(LAPACK
 GIT_REPOSITORY ${lapack_git}
 GIT_TAG ${lapack_tag}
-INACTIVITY_TIMEOUT 30
+INACTIVITY_TIMEOUT 15
 CONFIGURE_HANDLED_BY_BUILD ON
 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${LAPACK_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
 CMAKE_CACHE_ARGS -Darith:STRING=${arith}
@@ -55,7 +56,7 @@ CMAKE_CACHE_ARGS -Darith:STRING=${arith}
 ExternalProject_Add(SCALAPACK
 GIT_REPOSITORY ${scalapack_git}
 GIT_TAG ${scalapack_tag}
-INACTIVITY_TIMEOUT 30
+INACTIVITY_TIMEOUT 15
 CONFIGURE_HANDLED_BY_BUILD ON
 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${SCALAPACK_ROOT} -DLAPACK_ROOT:PATH=${LAPACK_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
 CMAKE_CACHE_ARGS -Darith:STRING=${arith}
@@ -64,24 +65,26 @@ DEPENDS LAPACK)
 ExternalProject_Add(MUMPS
 GIT_REPOSITORY ${mumps_git}
 GIT_TAG ${mumps_tag}
-INACTIVITY_TIMEOUT 30
+INACTIVITY_TIMEOUT 15
 CONFIGURE_HANDLED_BY_BUILD ON
 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${MUMPS_ROOT} -DLAPACK_ROOT:PATH=${LAPACK_ROOT} -DSCALAPACK_ROOT:PATH=${SCALAPACK_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
 CMAKE_CACHE_ARGS -Darith:STRING=${arith}
 DEPENDS SCALAPACK)
 
+include(${PROJECT_SOURCE_DIR}/../cmake/ext_libs/build_hdf5.cmake)
+
 ExternalProject_Add(H5FORTRAN
 GIT_REPOSITORY ${h5fortran_git}
 GIT_TAG ${h5fortran_tag}
-INACTIVITY_TIMEOUT 30
+INACTIVITY_TIMEOUT 15
 CONFIGURE_HANDLED_BY_BUILD ON
-CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${H5FORTRAN_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false -Dhdf5_external=on
-)
+CMAKE_ARGS -DHDF5_ROOT:PATH=${HDF5_ROOT} -DCMAKE_INSTALL_PREFIX:PATH=${H5FORTRAN_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false -Dhdf5_external=on
+DEPENDS HDF5)
 
 ExternalProject_Add(GLOW
 GIT_REPOSITORY ${glow_git}
 GIT_TAG ${glow_tag}
-INACTIVITY_TIMEOUT 30
+INACTIVITY_TIMEOUT 15
 CONFIGURE_HANDLED_BY_BUILD ON
 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${GLOW_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
 )
