--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -6,17 +6,12 @@ if(${PROJECT_NAME}_BUILD_TESTING)
   add_test(NAME debug:EchoEnvVar COMMAND $<TARGET_FILE:echo_path>)
 endif()
 
-add_library(helpmod OBJECT help.f90)
-target_link_libraries(helpmod PRIVATE config)
-set_target_properties(helpmod PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
-target_include_directories(helpmod INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
-
 #--------magnetic field calculation executable---------------
 configure_file(magcalc_cli.in.f90 magcalc_cli.f90 @ONLY)
 add_executable(magcalc.bin)
 target_sources(magcalc.bin PRIVATE magcalc.f90 ${CMAKE_CURRENT_BINARY_DIR}/magcalc_cli.f90
 $<TARGET_OBJECTS:autogrid>)
-target_link_libraries(magcalc.bin PRIVATE helpmod config const grid io mesh mpimod pathlib reader sanity_check errors timeutils h5fortran::h5fortran)
+target_link_libraries(magcalc.bin PRIVATE exe_frontend config const grid io mesh mpimod pathlib reader sanity_check errors timeutils h5fortran::h5fortran)
 set_target_properties(magcalc.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 add_test(NAME unit:magcalc_exe_ok COMMAND $<TARGET_FILE:magcalc.bin>)
@@ -49,10 +44,15 @@ Ncpu = ${plan_cpu}")
 endif(APPLE)
 # --- END Apple M1 workaround
 
-configure_file(gemini3d_run.in.f90 gemini3d_run.f90 @ONLY)
-add_executable(gemini3d.run)
-target_sources(gemini3d.run PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/gemini3d_run.f90 runner.f90)
-target_link_libraries(gemini3d.run PRIVATE const helpmod hwloc_ifc hwloc_c config pathlib timeutils autogrid reader h5fortran::h5fortran nc4fortran::nc4fortran)
+configure_file(exe_frontend.in.f90 exe_frontend.f90 @ONLY)
+
+add_library(exe_frontend ${CMAKE_CURRENT_BINARY_DIR}/exe_frontend.f90)
+target_link_libraries(exe_frontend PRIVATE config hwloc_ifc hwloc_c pathlib)
+set_target_properties(exe_frontend PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+target_include_directories(exe_frontend INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
+
+add_executable(gemini3d.run gemini3d_run.f90 runner.f90)
+target_link_libraries(gemini3d.run PRIVATE exe_frontend const config timeutils autogrid reader h5fortran::h5fortran nc4fortran::nc4fortran)
 if(HWLOC_FOUND)
   target_link_libraries(gemini3d.run PRIVATE HWLOC::HWLOC)
 endif()
@@ -93,3 +93,6 @@ set_target_properties(gemini3d.compare PROPERTIES
 install(TARGETS gemini3d.compare
   EXPORT ${PROJECT_NAME}Targets
   RUNTIME DESTINATION bin)
+
+
+set_targ_props(exe_frontend)
