--- a/src/numerical/coord/CMakeLists.txt
+++ b/src/numerical/coord/CMakeLists.txt
@@ -16,6 +16,7 @@ target_link_libraries(meshobj_dipole PRIVATE const meshobj newton spherical geom
 add_library(meshobj_cart OBJECT meshobj_cart.f90)
 target_link_libraries(meshobj_cart PRIVATE const meshobj spherical geomagnetic)
 
+if(BUILD_TESTING)
 add_executable(newton_testdriver newton_testdriver.f90)
 target_link_libraries(newton_testdriver PRIVATE const newton meshobj meshobj_dipole newton spherical geomagnetic)
 
@@ -33,4 +34,6 @@ target_link_libraries(fullgrid_cartesian_testdriver PRIVATE const meshobj meshob
 
 add_executable(fullgrid_dipole_testdriver_root fullgrid_dipole_testdriver_root.f90)
 target_link_libraries(fullgrid_dipole_testdriver_root PRIVATE const meshobj meshobj_dipole newton spherical geomagnetic)
+endif(BUILD_TESTING)
 
+set_targ_props(meshobj meshobj_cart meshobj_dipole newton spherical geomagnetic)
