--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -33,6 +33,6 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - name: CDash
-      run: ctest -S ci.cmake -V -E 3d
-      timeout-minutes: 20
+    - run: cmake --preset default
+    - run: cmake --build build
+    - run: ctest --preset default -E 3d
