--- a/src/numerical/CMakeLists.txt
+++ b/src/numerical/CMakeLists.txt
@@ -8,11 +8,7 @@ add_subdirectory(interpolation)
 # --- grid
 add_subdirectory(grid)
 
-# --- calculus
-configure_file(calculus/calculus.in.f90 calculus.f90 @ONLY)
-add_library(calculus OBJECT
-  ${CMAKE_CURRENT_BINARY_DIR}/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
-target_link_libraries(calculus PRIVATE meshobj)
+add_subdirectory(calculus)
 
 add_subdirectory(diffusion)
 
@@ -23,4 +19,4 @@ add_subdirectory(potential)
 
 add_subdirectory(coord)
 
-set_targ_props(advec calculus const diffusion grid interp mumps_interface PDEelliptic PDEparabolic potential)
+set_targ_props(advec const diffusion grid interp mumps_interface PDEelliptic PDEparabolic potential)
