add directory labels

--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_directory_properties(PROPERTIES LABELS diffusion)
+
 add_library(PDEparabolic OBJECT PDEparabolic.f90)
 target_link_libraries(PDEparabolic PRIVATE const gbsv)
 
@@ -12,7 +14,6 @@ add_executable(test_diffusion1d test_diffusion1D.f90)
 # lapack needed for MacOS
 target_link_libraries(test_diffusion1d PRIVATE PDEparabolic gbsv const
   LAPACK::LAPACK h5fortran::h5fortran)
-set_target_properties(test_diffusion1d PROPERTIES LABELS unit)
 # WORKING_DIRECTORY is needed to write output file to repeatable path.
 add_test(NAME unit:diffusion1
   COMMAND $<TARGET_FILE:test_diffusion1d> ${_tmpdifffn}
