--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_directory_properties(PROPERTIES LABELS unit)
+
 if(NOT ${PROJECT_NAME}_BUILD_TESTING)
   return()
 endif()
@@ -9,7 +11,6 @@ endif()
 
 add_executable(test_mpi test_mpi.f90)
 target_link_libraries(test_mpi PRIVATE MPI::MPI_Fortran)
-set_target_properties(test_mpi PROPERTIES LABELS unit)
 
 add_test(NAME unit:mpi_basic
 COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_mpi> ${Ncpu})
@@ -17,7 +18,6 @@ COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_F
 set_tests_properties(unit:mpi_basic PROPERTIES
 TIMEOUT 15
 PROCESSORS ${Ncpu}
-LABELS unit
 DEPENDS unit:HWLOC
 FIXTURES_SETUP mpi_fxt
 RESOURCE_LOCK cpu_mpi)
@@ -32,12 +32,10 @@ endif()
 configure_file(test_scalapack.in.f90 test_scalapack.f90 @ONLY)
 add_executable(gemini_scalapack ${CMAKE_CURRENT_BINARY_DIR}/test_scalapack.f90)
 target_link_libraries(gemini_scalapack PRIVATE SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
-set_target_properties(gemini_scalapack PROPERTIES LABELS unit)
 
 add_test(NAME unit:scalapack COMMAND $<TARGET_FILE:gemini_scalapack>)
 set_tests_properties(unit:scalapack PROPERTIES
 TIMEOUT 15
-LABELS unit
 FIXTURES_REQUIRED mpi_fxt
 FIXTURES_SETUP scalapack_fxt)
 
@@ -45,7 +43,6 @@ FIXTURES_SETUP scalapack_fxt)
 add_executable(test_mumps test_mumps.f90)
 target_link_libraries(test_mumps PRIVATE mumps_interface
   MUMPS::MUMPS SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
-set_target_properties(test_mumps PROPERTIES LABELS unit)
 
 add_test(NAME unit:mumps_basic
 COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:test_mumps>
@@ -54,7 +51,6 @@ WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 set_tests_properties(unit:mumps_basic PROPERTIES
 TIMEOUT 15
 PROCESSORS 2
-LABELS unit
 RESOURCE_LOCK cpu_mpi
 REQUIRED_FILES ${CMAKE_CURRENT_SOURCE_DIR}/input_simpletest_real.nml
 FIXTURES_REQUIRED scalapack_fxt
