--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_directory_properties(PROPERTIES LABELS io)
+
 add_library(logging OBJECT logging.f90)
 
 # --- error handling -- dump data to disk
@@ -18,7 +20,6 @@ if(${PROJECT_NAME}_BUILD_TESTING)
     # so we by default omit this test.
     add_executable(test_errors test_errors.f90)
     target_link_libraries(test_errors PRIVATE errors const h5fortran::h5fortran)
-    set_target_properties(test_errors PROPERTIES LABELS unit)
 
     add_test(NAME gemini:stop:zero COMMAND $<TARGET_FILE:test_errors> root)
     set_tests_properties(gemini:stop:zero PROPERTIES
@@ -62,7 +63,6 @@ set(_test_file ${CMAKE_CURRENT_SOURCE_DIR}/../unit_tests/config/config_example.n
 if(${PROJECT_NAME}_BUILD_TESTING)
 
 add_executable(test_namelist test_nml.f90)
-set_target_properties(test_namelist PROPERTIES LABELS unit)
 add_test(NAME unit:namelist COMMAND $<TARGET_FILE:test_namelist> ${_test_file})
 set_tests_properties(unit:namelist PROPERTIES
 REQUIRED_FILES ${_test_file}
@@ -71,7 +71,6 @@ TIMEOUT 10)
 
 add_executable(test_compiler_vendor test_compiler_vendor.f90)
 target_link_libraries(test_compiler_vendor PRIVATE config pathlib)
-set_target_properties(test_compiler_vendor PROPERTIES LABELS unit)
 add_test(NAME unit:compiler_vendor COMMAND $<TARGET_FILE:test_compiler_vendor>)
 set_tests_properties(unit:compiler_vendor PROPERTIES
 PASS_REGULAR_EXPRESSION ${CMAKE_Fortran_COMPILER_ID}
@@ -80,7 +79,6 @@ TIMEOUT 10)
 
 add_executable(test_expand_envvar test_expand_envvar.f90)
 target_link_libraries(test_expand_envvar PRIVATE config pathlib)
-set_target_properties(test_expand_envvar PROPERTIES LABELS unit)
 add_test(NAME unit:expand_envvar COMMAND $<TARGET_FILE:test_expand_envvar>)
 set_tests_properties(unit:expand_envvar PROPERTIES
 ENVIRONMENT test__gem=hello
