dipole_root: allow user-specified number of loops. Add alloc checks

--- a/src/numerical/coord/CMakeLists.txt
+++ b/src/numerical/coord/CMakeLists.txt
@@ -45,7 +45,7 @@ foreach(t newton_testdriver geomag2geog_testdriver grid_testdriver fullgrid_dipo
 
   add_test(NAME "unit:${t}" COMMAND $<TARGET_FILE:${t}>)
 
-  set_tests_properties(${t} PROPERTIES
+  set_tests_properties(unit:${t} PROPERTIES
     TIMEOUT 30
     LABELS "unit"
     )
