grid:mpi2_shim: suppress false warnings of mismatch type due to MPI-2 interface [skip ci]
This causes segfaults at run time. Not sure why.

--- a/src/numerical/grid/CMakeLists.txt
+++ b/src/numerical/grid/CMakeLists.txt
@@ -1,7 +1,7 @@
 configure_file(mesh.in.f90 mesh.f90 @ONLY)
 add_library(mesh OBJECT ${CMAKE_CURRENT_BINARY_DIR}/mesh.f90)
 
-add_library(grid grid.f90 read.f90 check.f90
+add_library(grid grid.f90 read.f90 check.f90 mpi2_shim.f90
 readgrid_hdf5.f90 readgrid_nc4.f90 readgrid_raw.f90)
 # not OBJECT to avoid problems with CMake 3.13
 target_compile_options(grid PRIVATE ${gcc10opts})
