--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,8 @@ jobs:
 
 
   windows_no_mpi:
+    # it's tricky to install mpiexec automatically on Windows (see p4est)
+    # thus it's convenient to use Windows as a no-MPI, no-hwloc test case
     timeout-minutes: 20
     runs-on: windows-latest
     needs: linux
